--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,12 @@
 baseURL = 'https://filipecarneiro.github.io/hugo-bootstrap-theme/'
-title = "Hugo Bootstrap Theme"
-author = "Filipe Carneiro"
-copyright = "Open-source <a class=\"text-muted text-decoration-none\" href=\"https://github.com/filipecarneiro/hugo-bootstrap-theme/blob/main/LICENSE\">MIT</a> Licensed."
+title = "Synthesium"
+author = "Ash Fujiyama"
+copyright = "Open-source. <a class=\"text-muted text-decoration-none\" href=\"https://github.com/filipecarneiro/hugo-bootstrap-theme/blob/main/LICENSE\">Theme by Filipe Carneiro</a>"
 
-timeZone = 'Europe/London'
+timeZone = 'EST'
 
 # Multilingual
-defaultContentLanguage = "en"
+defaultContentLanguage = "en-us"
 defaultContentLanguageInSubdir = false
 
 theme = "hugo-bootstrap-theme"
