--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
-baseURL = 'https://filipecarneiro.github.io/hugo-bootstrap-theme/'
+baseURL = 'https://ashfujiyama.github.io/hugo-mock-landing-page/'
 title = "Synthesium"
 author = "Ash Fujiyama"
-copyright = "Open-source. <a class=\"text-muted text-decoration-none\" href=\"https://github.com/filipecarneiro/hugo-bootstrap-theme/blob/main/LICENSE\">Theme by Filipe Carneiro</a>"
+copyright = "Ash Fujiyama"
 
 timeZone = 'EST'
 
