trying to fix css by commenting out baseURL after switching to custom domain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://ashfujiyama.github.io/hugo-mock-landing-page-domain-name/'
+#baseURL = 'https://ashfujiyama.github.io/hugo-mock-landing-page-domain-name/'
 title = "Synthesium"
 author = "Ash Fujiyama"
 copyright = "Ash Fujiyama"
