--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-#baseURL = 'https://ashfujiyama.github.io/hugo-mock-landing-page-domain-name/'
+baseURL = 'synthesium.xyz'
 title = "Synthesium"
 author = "Ash Fujiyama"
 copyright = "Ash Fujiyama"
