--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'synthesium.xyz'
+baseURL = 'https://synthesium.xyz'
 title = "Synthesium"
 author = "Ash Fujiyama"
 copyright = "Ash Fujiyama"
